[gd_scene load_steps=10 format=3 uid="uid://bccw4fsbdtyu8"]

[ext_resource type="PackedScene" uid="uid://3wxtqo3xrg85" path="res://scenes/world_icon.tscn" id="1_ijb5f"]
[ext_resource type="Script" path="res://scripts/level_selection.gd" id="1_yo2sw"]
[ext_resource type="Texture2D" uid="uid://c5ppwguha77b8" path="res://resources/background/TV - 2.png" id="2_ldq71"]
[ext_resource type="PackedScene" uid="uid://bmpclaaxl4jf6" path="res://scenes/player_icon.tscn" id="3_vpnfn"]
[ext_resource type="Texture2D" uid="uid://d3aef1ev1btxa" path="res://icon.svg" id="4_nobda"]
[ext_resource type="Texture2D" uid="uid://x70m4jgydasp" path="res://resources/sprites/Rectangle 13.png" id="5_2r48t"]
[ext_resource type="FontFile" uid="uid://kll2grp8sedk" path="res://resources/fonts/chernobyl/Chernobyl.otf" id="6_6tjnb"]
[ext_resource type="Texture2D" uid="uid://f2tvfmruyp0j" path="res://resources/sprites/Group 12.png" id="7_acqds"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y2rp8"]
texture = ExtResource("2_ldq71")

[node name="LevelSelection" type="Control" node_paths=PackedStringArray("player_icon", "level_1_info", "level_2_info", "level_3_info", "level_4_info")]
layout_mode = 3
anchors_preset = 0
offset_left = 1.0
offset_right = 1281.0
offset_bottom = 721.0
script = ExtResource("1_yo2sw")
player_icon = NodePath("playerIcon")
level_1_info = NodePath("1sliderPatchRect")
level_2_info = NodePath("2sliderPatchRect2")
level_3_info = NodePath("3sliderPatchRect3")
level_4_info = NodePath("4sliderPatchRect4")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 723.0
theme_override_styles/panel = SubResource("StyleBoxTexture_y2rp8")

[node name="WorldIcon" parent="." instance=ExtResource("1_ijb5f")]
offset_left = 911.0
offset_top = 65.0
offset_right = 1039.0
offset_bottom = 193.0

[node name="WorldIcon2" parent="." instance=ExtResource("1_ijb5f")]
offset_left = 1089.0
offset_top = 288.0
offset_right = 1217.0
offset_bottom = 416.0
level_index = 2

[node name="WorldIcon3" parent="." instance=ExtResource("1_ijb5f")]
offset_left = 902.0
offset_top = 526.0
offset_right = 1030.0
offset_bottom = 654.0
level_index = 3

[node name="WorldIcon4" parent="." instance=ExtResource("1_ijb5f")]
offset_left = 712.0
offset_top = 365.0
offset_right = 840.0
offset_bottom = 493.0
level_index = 4

[node name="playerIcon" parent="." instance=ExtResource("3_vpnfn")]
layout_mode = 0
offset_left = 1147.0
offset_top = 15.0
offset_right = 1275.0
offset_bottom = 143.0

[node name="1sliderPatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.012
anchor_top = 0.501
anchor_right = 0.012
anchor_bottom = 0.501
offset_left = 27.64
offset_top = -361.221
offset_right = 623.64
offset_bottom = 360.779
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="1sliderPatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_2r48t")

[node name="sliderContentContainer" type="VBoxContainer" parent="1sliderPatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -336.0
offset_right = 350.0
offset_bottom = 358.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="headerContainer" type="HBoxContainer" parent="1sliderPatchRect/sliderContentContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="backbuttonContainer" type="MarginContainer" parent="1sliderPatchRect/sliderContentContainer/headerContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="backtoHomeButton" type="Button" parent="1sliderPatchRect/sliderContentContainer/headerContainer/backbuttonContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("6_6tjnb")
text = "BACK"

[node name="titleContainer" type="MarginContainer" parent="1sliderPatchRect/sliderContentContainer/headerContainer"]
layout_mode = 2

[node name="levelSelectionTitle" type="Label" parent="1sliderPatchRect/sliderContentContainer/headerContainer/titleContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("6_6tjnb")
theme_override_font_sizes/font_size = 50
text = "Select location"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="thumbnail" type="TextureRect" parent="1sliderPatchRect/sliderContentContainer"]
custom_minimum_size = Vector2(600, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("7_acqds")

[node name="sliderInfoText" type="MarginContainer" parent="1sliderPatchRect/sliderContentContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 15

[node name="infoTextLabel" type="Label" parent="1sliderPatchRect/sliderContentContainer/sliderInfoText"]
layout_mode = 2
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("6_6tjnb")
text = "W h a t   i s   t h i s   p l a c e ?   A   c i t y ?   A n   a n c i e n t   R u i n? 

E v e r y t h i n g s   i s . .  .   s t i l l   i n   p  l a c e . . .

E v e n   t h e   E x p l o s i o n s !

I   w a n t   t o   f i n d   t h e    r o o t   o f   t h i s    p h e  n o m e n o n 

I   n e e d   t o . . . "
horizontal_alignment = 1
vertical_alignment = 1

[node name="startButtonContainer" type="MarginContainer" parent="1sliderPatchRect/sliderContentContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 15

[node name="1levelStartButton" type="Button" parent="1sliderPatchRect/sliderContentContainer/startButtonContainer"]
custom_minimum_size = Vector2(600, 50)
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_6tjnb")
theme_override_font_sizes/font_size = 36
text = "START LEVEL 1"

[node name="2sliderPatchRect2" type="NinePatchRect" parent="."]
visible = false
layout_mode = 0
offset_right = 640.0
offset_bottom = 722.0

[node name="BG" type="ColorRect" parent="2sliderPatchRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.388235, 0.388235, 0.388235, 1)

[node name="sliderContentContainer" type="VBoxContainer" parent="2sliderPatchRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="headerContainer" type="HBoxContainer" parent="2sliderPatchRect2/sliderContentContainer"]
layout_mode = 2

[node name="backbuttonContainer" type="MarginContainer" parent="2sliderPatchRect2/sliderContentContainer/headerContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="backtoHomeButton" type="Button" parent="2sliderPatchRect2/sliderContentContainer/headerContainer/backbuttonContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "BACK"

[node name="titleContainer" type="MarginContainer" parent="2sliderPatchRect2/sliderContentContainer/headerContainer"]
layout_mode = 2

[node name="levelSelectionTitle" type="Label" parent="2sliderPatchRect2/sliderContentContainer/headerContainer/titleContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 50
text = "Select location"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="thumbnail" type="TextureRect" parent="2sliderPatchRect2/sliderContentContainer"]
custom_minimum_size = Vector2(600, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_nobda")

[node name="sliderInfoText" type="MarginContainer" parent="2sliderPatchRect2/sliderContentContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 5

[node name="infoTextLabel" type="Label" parent="2sliderPatchRect2/sliderContentContainer/sliderInfoText"]
layout_mode = 2
text = "fvjfnifnfjbnvdj nfvfdjdddddddddddddddddddddddddddddddddddddddddd
vfvcccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc

ccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc
cccccccccccccccccccccccccccccccccccccccccccccccccccccccc
sssssssssssss
s
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc
fefffffffffff"

[node name="startButtonContainer" type="MarginContainer" parent="2sliderPatchRect2/sliderContentContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="2levelStartButton" type="Button" parent="2sliderPatchRect2/sliderContentContainer/startButtonContainer"]
custom_minimum_size = Vector2(600, 50)
layout_mode = 2
text = "START Level 2"

[node name="3sliderPatchRect3" type="NinePatchRect" parent="."]
visible = false
layout_mode = 0
offset_right = 640.0
offset_bottom = 722.0

[node name="BG" type="ColorRect" parent="3sliderPatchRect3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.388235, 0.388235, 0.388235, 1)

[node name="sliderContentContainer" type="VBoxContainer" parent="3sliderPatchRect3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="headerContainer" type="HBoxContainer" parent="3sliderPatchRect3/sliderContentContainer"]
layout_mode = 2

[node name="backbuttonContainer" type="MarginContainer" parent="3sliderPatchRect3/sliderContentContainer/headerContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="backtoHomeButton" type="Button" parent="3sliderPatchRect3/sliderContentContainer/headerContainer/backbuttonContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "BACK"

[node name="titleContainer" type="MarginContainer" parent="3sliderPatchRect3/sliderContentContainer/headerContainer"]
layout_mode = 2

[node name="levelSelectionTitle" type="Label" parent="3sliderPatchRect3/sliderContentContainer/headerContainer/titleContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 50
text = "Select location"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="thumbnail" type="TextureRect" parent="3sliderPatchRect3/sliderContentContainer"]
custom_minimum_size = Vector2(600, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_nobda")

[node name="sliderInfoText" type="MarginContainer" parent="3sliderPatchRect3/sliderContentContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 5

[node name="infoTextLabel" type="Label" parent="3sliderPatchRect3/sliderContentContainer/sliderInfoText"]
layout_mode = 2
text = "fvjfnifnfjbnvdj nfvfdjdddddddddddddddddddddddddddddddddddddddddd
vfvcccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc

ccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc
cccccccccccccccccccccccccccccccccccccccccccccccccccccccc
sssssssssssss
s
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc
fefffffffffff"

[node name="startButtonContainer" type="MarginContainer" parent="3sliderPatchRect3/sliderContentContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="3levelStartButton" type="Button" parent="3sliderPatchRect3/sliderContentContainer/startButtonContainer"]
custom_minimum_size = Vector2(600, 50)
layout_mode = 2
text = "START LEVEL 3"

[node name="4sliderPatchRect4" type="NinePatchRect" parent="."]
visible = false
layout_mode = 0
offset_right = 640.0
offset_bottom = 722.0

[node name="BG" type="ColorRect" parent="4sliderPatchRect4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.388235, 0.388235, 0.388235, 1)

[node name="sliderContentContainer" type="VBoxContainer" parent="4sliderPatchRect4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="headerContainer" type="HBoxContainer" parent="4sliderPatchRect4/sliderContentContainer"]
layout_mode = 2

[node name="backbuttonContainer" type="MarginContainer" parent="4sliderPatchRect4/sliderContentContainer/headerContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="backtoHomeButton" type="Button" parent="4sliderPatchRect4/sliderContentContainer/headerContainer/backbuttonContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "BACK"

[node name="titleContainer" type="MarginContainer" parent="4sliderPatchRect4/sliderContentContainer/headerContainer"]
layout_mode = 2

[node name="levelSelectionTitle" type="Label" parent="4sliderPatchRect4/sliderContentContainer/headerContainer/titleContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 50
text = "Select location"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="thumbnail" type="TextureRect" parent="4sliderPatchRect4/sliderContentContainer"]
custom_minimum_size = Vector2(600, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_nobda")

[node name="sliderInfoText" type="MarginContainer" parent="4sliderPatchRect4/sliderContentContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 5

[node name="infoTextLabel" type="Label" parent="4sliderPatchRect4/sliderContentContainer/sliderInfoText"]
layout_mode = 2
text = "fvjfnifnfjbnvdj nfvfdjdddddddddddddddddddddddddddddddddddddddddd
vfvcccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc

ccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc
cccccccccccccccccccccccccccccccccccccccccccccccccccccccc
sssssssssssss
s
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc
fefffffffffff"

[node name="startButtonContainer" type="MarginContainer" parent="4sliderPatchRect4/sliderContentContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="4levelStartButton" type="Button" parent="4sliderPatchRect4/sliderContentContainer/startButtonContainer"]
custom_minimum_size = Vector2(600, 50)
layout_mode = 2
text = "START LEVEL 4"

[node name="level1Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0.345098)
self_modulate = Color(1, 1, 1, 0.486275)
custom_minimum_size = Vector2(128, 128)
layout_mode = 0
offset_left = 911.0
offset_top = 64.0
offset_right = 1039.0
offset_bottom = 192.0
theme_override_colors/icon_normal_color = Color(1, 1, 1, 0)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0.427493, 0.427493, 0.427493, 1)

[node name="level2Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0.345098)
self_modulate = Color(1, 1, 1, 0.486275)
custom_minimum_size = Vector2(128, 128)
layout_mode = 0
offset_left = 1090.0
offset_top = 287.0
offset_right = 1218.0
offset_bottom = 415.0
theme_override_colors/icon_normal_color = Color(1, 1, 1, 0)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0.427493, 0.427493, 0.427493, 1)

[node name="level3Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0.345098)
self_modulate = Color(1, 1, 1, 0.486275)
custom_minimum_size = Vector2(128, 128)
layout_mode = 0
offset_left = 902.0
offset_top = 524.0
offset_right = 1030.0
offset_bottom = 652.0
theme_override_colors/icon_normal_color = Color(1, 1, 1, 0)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0.427493, 0.427493, 0.427493, 1)

[node name="level4Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0.345098)
self_modulate = Color(1, 1, 1, 0.486275)
custom_minimum_size = Vector2(128, 128)
layout_mode = 0
offset_left = 713.0
offset_top = 367.0
offset_right = 841.0
offset_bottom = 495.0
theme_override_colors/icon_normal_color = Color(1, 1, 1, 0)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0.427493, 0.427493, 0.427493, 1)

[connection signal="pressed" from="1sliderPatchRect/sliderContentContainer/headerContainer/backbuttonContainer/backtoHomeButton" to="." method="_on_back_to_home_button_pressed"]
[connection signal="pressed" from="1sliderPatchRect/sliderContentContainer/startButtonContainer/1levelStartButton" to="." method="_on_level_start_button_pressed"]
[connection signal="pressed" from="level1Button" to="." method="_on_level_1_button_pressed"]
[connection signal="pressed" from="level2Button" to="." method="_on_level_2_button_pressed"]
[connection signal="pressed" from="level3Button" to="." method="_on_level_3_button_pressed"]
[connection signal="pressed" from="level4Button" to="." method="_on_level_4_button_pressed"]
